--- a/frontend/src/app/components/sign-up/sign-up.component.html
+++ b/frontend/src/app/components/sign-up/sign-up.component.html
@@ -18,7 +18,7 @@
         <input pInputText id="password" type="password" placeholder="Password" [(ngModel)]="password" />
     </div>
 
-    <button pButton label="Sign Up" class="p-button-rounded p-button-success sign-up-button"></button>
+    <button pButton label="Sign Up" class="p-button-rounded p-button-success sign-up-button" routerLink="/log-in"></button>
 
     <div class="login-link">
         Already have an account? <a routerLink="/log-in">Login</a>
