--- a/frontend/src/app/components/analytics/analytics.component.html
+++ b/frontend/src/app/components/analytics/analytics.component.html
@@ -18,7 +18,7 @@
           (click)="setActiveTab('dashboard')"
         >
           <i class="pi pi-home"></i>
-          <span>QR Code</span>
+          <span>Dashboard</span>
         </li>
         <li
           class="menu-item"
